--- a/insurance/templates/index.html
+++ b/insurance/templates/index.html
@@ -31,6 +31,15 @@
 
         <div class="benefits">
             <img id="big-logo" src="{{ STATIC_URL }}images/big_logo.png" alt="logo"/>
+
+            <div class="benefits-words">
+                <span class="big-word">Инновационность</span>
+                <span class="main-word">Ответственность</span>
+                <span class="main-word">Надежность</span>
+                <span class="main-word">Сервис</span>
+                
+                <span id="slogan">Больше чем просто страховая компания</span>
+            </div>
         </div>
     </div>
 
