Добавлена ссылка на вход в кабинет

--- a/insurance/templates/index.html
+++ b/insurance/templates/index.html
@@ -41,6 +41,8 @@
                 <span id="slogan">Больше чем просто страховая компания</span>
             </div>
         </div>
+
+        <a href="#" rel="#pop_up_2" id="login-url">вход в кабинет</a>
     </div>
 
     <script type="text/javascript" src="{{ STATIC_URL }}js/script.js"></script>
