--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -279,10 +279,10 @@ a:hover        {text-decoration:none}
 				
 				
 				
-.content_home	{height: 516px; top: 20px; position:relative; overflow: hidden; margin-bottom: 50px;}
+.content_home	{height: 516px; top: 20px; position:relative; overflow: hidden; margin-bottom: 50px; padding-bottom: 50px;}
 	.flash	{float:left; width:535px; padding:0 0 0 18px;}
 	
-.benefits	{overflow:hidden; width: 400px; height: 228px; position: absolute; top: 300px; left: 60px; margin-right: -37px; text-align: center;}
+.benefits	{overflow:hidden; width: 400px; height: 228px; position: absolute; top: 320px; left: 60px; margin-right: -37px; text-align: center;}
 
     .benefits #big-logo{
         margin-bottom: 20px;
@@ -315,6 +315,15 @@ a:hover        {text-decoration:none}
         text-align: center;
         font-weight: bold;
     }
+
+#login-url{
+    position: absolute;
+    top: 433px;
+    right: 60px;
+    color: #4e1b07;
+    text-transform: uppercase;
+    font-weight: bold;
+}
 
 .tabs_footer	{padding:0 0 0 25px;}
 	.tabs_footer_link	{overflow:hidden; padding:0 30px 0 10px; float:left;}
