--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -543,12 +543,12 @@ a:hover        {text-decoration:none}
 	footer
 -------------------*/
 
-.footer        {border-top:1px solid #443b36; padding:22px 0 10px 16px; overflow:hidden;}
+.footer        {padding: 62px 0 10px 16px; overflow:hidden;}
 	.footer a	{color:#fc7300;}
-	.copyright	{float:left; background:url(/static/images/copyright.gif) 0 1px no-repeat; padding:0 0 3px 24px; font-size:10px; color:#000; width:380px;}
-	.copyright span	{color:#fc7300; font-size:14px; width:378px;}
-	.email_1	{float:left; width:200px; padding:0 10px 0 0; font-size:10px; color:#472313;}
-	.email_2	{float:left; width:160px; font-size:10px; color:#472313;}
+	.copyright	{float:left; background:url(/static/images/copyright.gif) 0 1px no-repeat; padding:0 0 3px 24px; font-size:14px; color:#000; width:380px;}
+	.copyright span	{color:#fc7300; font-size:18px; width:378px;}
+	.email_1	{float:left; width:200px; padding:0 10px 0 0; font-size:14px; color:#472313;}
+	.email_2	{float:left; width:160px; font-size:14px; color:#472313;}
 	.phone_ico	{float:right; background:url(/static/images/phone_ico.jpg) 0 0 no-repeat; width:92px; height:75px; margin:-10px 23px 0 0;}
 	
 	
