--- a/insurance/templates/registration/forms/login_form_full.html
+++ b/insurance/templates/registration/forms/login_form_full.html
@@ -3,7 +3,7 @@
 			Личный кабинет
 		</div>
 		<div class="pop_up_cont"><div class="pop_up_cont_in">
-    <form action="{% url auth_login %}" method="post">{% csrf_token %}
+    <form action="{% url auth_login %}?next={{ next }}" method="post">{% csrf_token %}
     <div class="messages">{{ form.non_field_errors }}</div>
       <table cellspacing="0" cellpadding="0" class="table_user_form">
 	<tr>
