--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -147,6 +147,7 @@ a:hover        {text-decoration:none}
                 position: absolute;
                 top: 10px;
                 right: 8px;
+                font-size: 8px;
             }
 
 
