--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -1428,6 +1428,7 @@ input.style_input5 {
     padding-bottom: 0 !important;
 }
 
+/*
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
     background: url(/static/images/header_acardion.gif) 0 0 repeat-x !important;
     overflow: hidden;
@@ -1441,6 +1442,7 @@ input.style_input5 {
     color: #fff !important;
     font-size: 14px;
 }
+*/
 
 .ui-accordion .ui-accordion-header a {
     padding: 1px 0 2px 12px !important;
@@ -2157,4 +2159,58 @@ div.messages li {
 
 .nodd {
     background-color: #969696;
+}
+
+/*New Calc Page*/
+#calc-tabs {
+    width: 966px;
+    margin: 50px auto 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#calc-tabs ul {
+    overflow: hidden;
+    margin: 0;
+    padding: 0 0 0 28px;
+    background: none;
+}
+
+#calc-tabs ul li {
+    list-style: none;
+    font-size: 16px;
+    line-height: 47px;
+    margin-right: -15px;
+    float: left;
+    text-align: center;
+
+}
+
+#calc-tabs ul li a {
+    display: block;
+    background: url(/static/images/tabs_link2.png) top left no-repeat;
+    width: 126px;
+    height: 47px;
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    position: relative;
+}
+
+#calc-tabs ul li.ui-state-active a, #calc-tabs ul li a:hover {
+    background: url(/static/images/tabs_link2_active.png) top left no-repeat;
+    z-index: 50;
+}
+
+#calc-tabs .ui-tabs-hide {
+    display: none;
+}
+
+#calc-tabs .ui-tabs-panel {
+    padding: 20px;
+    min-height: 657px;
+    border: 1px solid #4e1b06;
+    background: url(/static/images/back_tabs.png) bottom left repeat-x;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
 }
