--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -1,264 +1,289 @@
 {% extends "base.html" %}
 {% block content %}
 
-<script type="text/javascript" src="/static/js/jquery-1.6.3.min.js"></script>
-<script type="text/javascript">
+    <script type="text/javascript" src="/static/js/jquery-1.6.3.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
 
- $(function(){
-    if($("#id_mark").val() == ""){
-        $("#require-auto-data-first select").not(":first").attr("disabled", true);
-        $("#require-auto-data-first input").attr("disabled", true);
-    }
+    <script type="text/javascript">
 
-    $("#require-auto-data-first select").change(function(){
-       var nextselect = $(this).parents("tr").next("tr").find("select");
-       $(this).parents("tr").nextAll().find("select").html("");
+        $(function() {
+            $("#calc-tabs").tabs();
 
-       if($(this).val() != ""){
-           $(nextselect).removeAttr("disabled");
+            if ($("#id_mark").val() == "") {
+                $("#require-auto-data-first select").not(":first").attr("disabled", true);
+                $("#require-auto-data-first input").attr("disabled", true);
+            }
 
-           var sendingvalue = "";
-           var nextselectdata = nextselect.attr("name");
-           var data = {};
+            $("#require-auto-data-first select").change(function() {
+                var nextselect = $(this).parents("tr").next("tr").find("select");
+                $(this).parents("tr").nextAll().find("select").html("");
 
-           switch(nextselectdata){
-                case "model":
-                    sendingvalue = "{% url get_models %}";
-                    data[$(this).attr("name")] = $(this).val();
-                break;
+                if ($(this).val() != "") {
+                    $(nextselect).removeAttr("disabled");
 
-               case "model_year":
-                    sendingvalue = "{% url get_years %}";
-                    data[$(this).attr("name")] = $(this).val();
-                break;
+                    var sendingvalue = "";
+                    var nextselectdata = nextselect.attr("name");
+                    var data = {};
 
-                case "power":
-                    sendingvalue = "{% url get_powers %}";
-                    data['model'] = $("#id_model").val();
-                    data['year'] = $("#id_model_year").val();
-                break;
+                    switch (nextselectdata) {
+                        case "model":
+                            sendingvalue = "{% url get_models %}";
+                            data[$(this).attr("name")] = $(this).val();
+                            break;
 
-               default:
-                   $.ajax(
+                        case "model_year":
+                            sendingvalue = "{% url get_years %}";
+                            data[$(this).attr("name")] = $(this).val();
+                            break;
+
+                        case "power":
+                            sendingvalue = "{% url get_powers %}";
+                            data['model'] = $("#id_model").val();
+                            data['year'] = $("#id_model_year").val();
+                            break;
+
+                        default:
+                            $.ajax(
+                                    {
+                                        url:"{% url get_price %}",
+                                        data:{power:$("#id_power").val()},
+                                        dataType:"text",
+                                        success:function(data) {
+                                            if (data == "") {
+                                                $("#stoim").html("");
+                                                $("#id_price").attr("disabled", true);
+                                            }
+                                            else {
+                                                $("#stoim").html("Стоимость должна быть " + data);
+                                                $("#id_price").removeAttr("disabled");
+                                            }
+                                        }
+                                    }
+                            );
+                            break;
+                    }
+
+                    $.ajax(
                             {
-                                url:"{% url get_price %}",
-                                data:{power:$("#id_power").val()},
-                                dataType:"text",
+                                url: sendingvalue,
+                                data: data,
+                                dataType:"json",
                                 success:function(data) {
-                                    if (data == "") {
-                                        $("#stoim").html("");
-                                        $("#id_price").attr("disabled", true);
-                                    }
-                                    else {
-                                        $("#stoim").html("Стоимость должна быть " + data);
-                                        $("#id_price").removeAttr("disabled");
-                                    }
+                                    var options = '';
+                                    options += '<option value="">' + '--------' + '</option>';
+                                    $.each(data, function(index, value) {
+                                        options += '<option value="' + index + '">' + value + '</option>';
+                                    });
+                                    $(nextselect).html(options);
                                 }
                             }
                     );
-               break;
-           }
-
-           $.ajax(
-                {
-                    url: sendingvalue,
-                    data: data,
-                    dataType:"json",
-                    success:function(data) {
-                        var options = '';
-                        options += '<option value="">' + '--------' + '</option>';
-                        $.each(data, function(index, value) {
-                            options += '<option value="' + index + '">' + value + '</option>';
-                        });
-                        $(nextselect).html(options);
-                    }
+                } else {
+                    $(this).parents("tr").nextAll().find("select").attr("disabled", true);
+                    $("#require-auto-data-first input").attr("disabled", true);
                 }
-            );
-       }else{
-            $(this).parents("tr").nextAll().find("select").attr("disabled", true);
-            $("#require-auto-data-first input").attr("disabled", true);
-       }
-    })
+            })
 
 
+            $("#optional-auto-data tr:eq(1)").siblings().hide();
 
-   $("#optional-auto-data tr:eq(1)").siblings().hide();
+            $("#optional-auto-data select").change(function() {
+                if ($(this).val() != "") {
+                    $(this).parents("tr").next().show();
+                } else {
+                    $(this).parents("tr").nextAll().hide();
+                    $(this).parents("tr").nextAll().find("select").val("");
+                }
+            });
 
-   $("#optional-auto-data select").change(function(){
-        if($(this).val() != ""){
-            $(this).parents("tr").next().show();
-        }else{
-           $(this).parents("tr").nextAll().hide();
-           $(this).parents("tr").nextAll().find("select").val("");
-        }
-   });
+            $("#id_unlimited_drivers").click(function() {
+                if ($(this).attr("checked")) {
+                    $("#optional-auto-data").hide();
+                    $("#optional-auto-data select").val("");
+                } else {
+                    $("#optional-auto-data").show();
+                }
+            })
+        })
+    </script>
+    </head>
 
-   $("#id_unlimited_drivers").click(function(){
-       if($(this).attr("checked")){                         
-          $("#optional-auto-data").hide();
-          $("#optional-auto-data select").val("");
-       }else{
-           $("#optional-auto-data").show();
-       }
-   })
-})
-</script>
-</head>
 
-<body>
-<b id="stoim"></b><br/>
+    <div id="calc-tabs">
+        <ul>
+            <li><a href="#tabs-1">ОСАГО</a></li>
+            <li><a href="#tabs-2">КАСКО</a></li>
+            <li><a href="#tabs-3">ДМС</a></li>
+            <li><a href="#tabs-4">ДАГО</a></li>
+            <li><a href="#tabs-5">HC</a></li>
+            <li><a href="#tabs-6">ВЗР</a></li>
+            <li><a href="#tabs-7">ИФЛ</a></li>
+        </ul>
 
-<form action="" method="post">
-    {% csrf_token %}
+        <div id="tabs-1">
+            <b id="stoim"></b><br/>
 
-    {% if s1_form.non_field_errors %}
-        <div>
-            <h2>Ошибки заполнения формы:</h2>
-            {{ s1_form.non_field_errors }}
+            <form action="" method="post">
+                {% csrf_token %}
+
+                {% if s1_form.non_field_errors %}
+                    <div>
+                        <h2>Ошибки заполнения формы:</h2>
+                        {{ s1_form.non_field_errors }}
+                    </div>
+                {% endif %}
+
+
+                <table id="require-auto-data-first">
+                    <tr>
+                        <td><b>Обязательные данные:</b></td>
+                    </tr>
+                    <tr>
+                        <td>{{ s1_form.mark.label }}</td>
+                        <td>
+                            {{ s1_form.mark }}
+                            {{ s1_form.mark.errors }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>{{ s1_form.model.label }}</td>
+                        <td>
+                            {{ s1_form.model }}
+                            {{ s1_form.model.errors }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>{{ s1_form.model_year.label }}</td>
+                        <td>
+                            {{ s1_form.model_year }}
+                            {{ s1_form.model_year.errors }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>{{ s1_form.power.label }}</td>
+                        <td>
+                            {{ s1_form.power }}
+                            {{ s1_form.power.errors }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>{{ s1_form.price.label }}</td>
+                        <td>
+                            {{ s1_form.price }}
+                            {{ s1_form.price.errors }}
+                        </td>
+                    </tr>
+                </table>
+
+                <br/>
+
+                <table id="require-auto-data-second">
+                    <tr>
+                        <td>{{ s1_form.wheel.label }}</td>
+                        <td>
+                            {{ s1_form.wheel }}
+                            {{ s1_form.wheel.errors }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>{{ s1_form.city.label }}</td>
+                        <td>
+                            {{ s1_form.city }}
+                            {{ s1_form.city.errors }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>{{ s1_form.credit.label }}</td>
+                        <td>
+                            {{ s1_form.credit }}
+                            {{ s1_form.credit.errors }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>{{ s1_form.age.label }}</td>
+                        <td>
+                            {{ s1_form.age }}
+                            {{ s1_form.age.errors }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>{{ s1_form.experience_driving.label }}</td>
+                        <td>
+                            {{ s1_form.experience_driving }}
+                            {{ s1_form.experience_driving.errors }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>{{ s1_form.unlimited_drivers.label }}</td>
+                        <td>
+                            {{ s1_form.unlimited_drivers }}
+                            {{ s1_form.unlimited_drivers.errors }}
+                        </td>
+                    </tr>
+                </table>
+
+
+                <table id="optional-auto-data">
+                    <tr id="extrasect">
+                        <td><b>Доп. водители (опционально):</b></td>
+                    </tr>
+                    <tr id="vod1age">
+                        <td>{{ s1_form.age1.label }}</td>
+                        <td>
+                            {{ s1_form.age1 }}
+                            {{ s1_form.age1.errors }}
+                        </td>
+                    </tr>
+                    <tr id="vod1exp">
+                        <td>{{ s1_form.experience_driving1.label }}</td>
+                        <td>
+                            {{ s1_form.experience_driving1 }}
+                            {{ s1_form.experience_driving1.errors }}
+                        </td>
+                    </tr>
+                    <tr id="vod2age">
+                        <td>{{ s1_form.age2.label }}</td>
+                        <td>
+                            {{ s1_form.age2 }}
+                            {{ s1_form.age2.errors }}
+                        </td>
+                    </tr>
+                    <tr id="vod2exp">
+                        <td>{{ s1_form.experience_driving2.label }}</td>
+                        <td>
+                            {{ s1_form.experience_driving2 }}
+                            {{ s1_form.experience_driving2.errors }}
+                        </td>
+                    </tr>
+                    <tr id="vod3age">
+                        <td>{{ s1_form.age3.label }}</td>
+                        <td>
+                            {{ s1_form.age3 }}
+                            {{ s1_form.age3.errors }}
+                        </td>
+                    </tr>
+                    <tr id="vod3exp">
+                        <td>{{ s1_form.experience_driving3.label }}</td>
+                        <td>
+                            {{ s1_form.experience_driving3 }}
+                            {{ s1_form.experience_driving3.errors }}
+                        </td>
+                    </tr>
+                </table>
+
+                <input type="submit" value="Рассчитать"/>
+            </form>
+
+            <br/>
+            <a href="{% url cleansession %}">очистить сессию (для тестов)</a>
         </div>
-    {% endif %}
 
+        <div id="tabs-2">каско</div>
+        <div id="tabs-3">дмс</div>
+        <div id="tabs-4">даго</div>
+        <div id="tabs-5">нс</div>
+        <div id="tabs-6">взр</div>
+        <div id="tabs-7">ифл</div>
+    </div>
 
-    <table id="require-auto-data-first">
-        <tr>
-            <td><b>Обязательные данные:</b></td>
-        </tr>
-        <tr>
-            <td>{{ s1_form.mark.label }}</td>
-            <td>
-                {{ s1_form.mark }}
-                {{ s1_form.mark.errors }}
-            </td>
-        </tr>
-        <tr>
-            <td>{{ s1_form.model.label }}</td>
-            <td>
-                {{ s1_form.model }}
-                {{ s1_form.model.errors }}
-            </td>
-        </tr>
-        <tr>
-            <td>{{ s1_form.model_year.label }}</td>
-            <td>
-                {{ s1_form.model_year }}
-                {{ s1_form.model_year.errors }}
-            </td>
-        </tr>
-        <tr>
-            <td>{{ s1_form.power.label }}</td>
-            <td>
-                {{ s1_form.power }}
-                {{ s1_form.power.errors }}
-            </td>
-        </tr>
-        <tr>
-            <td>{{ s1_form.price.label }}</td>
-            <td>
-                {{ s1_form.price }}
-                {{ s1_form.price.errors }}
-            </td>
-        </tr>
-       </table>
-
-    <br/>
-
-     <table id="require-auto-data-second">
-        <tr>
-            <td>{{ s1_form.wheel.label }}</td>
-            <td>
-                {{ s1_form.wheel }}
-                {{ s1_form.wheel.errors }}
-            </td>
-        </tr>
-        <tr>
-            <td>{{ s1_form.city.label }}</td>
-            <td>
-                {{ s1_form.city }}
-                {{ s1_form.city.errors }}
-            </td>
-        </tr>
-        <tr>
-            <td>{{ s1_form.credit.label }}</td>
-            <td>
-                {{ s1_form.credit }}
-                {{ s1_form.credit.errors }}
-            </td>
-        </tr>
-        <tr>
-            <td>{{ s1_form.age.label }}</td>
-            <td>
-                {{ s1_form.age }}
-                {{ s1_form.age.errors }}
-            </td>
-        </tr>
-        <tr>
-            <td>{{ s1_form.experience_driving.label }}</td>
-            <td>
-                {{ s1_form.experience_driving }}
-                {{ s1_form.experience_driving.errors }}
-            </td>
-        </tr>
-        <tr>
-            <td>{{ s1_form.unlimited_drivers.label }}</td>
-            <td>
-                {{ s1_form.unlimited_drivers }}
-                {{ s1_form.unlimited_drivers.errors }}
-            </td>
-        </tr>
-        </table>
-
-
-      <table id="optional-auto-data">
-        <tr id="extrasect">
-            <td><b>Доп. водители (опционально):</b></td>
-        </tr>
-        <tr id="vod1age">
-            <td>{{ s1_form.age1.label }}</td>
-            <td>
-                {{ s1_form.age1 }}
-                {{ s1_form.age1.errors }}
-            </td>
-        </tr>
-        <tr id="vod1exp">
-            <td>{{ s1_form.experience_driving1.label }}</td>
-            <td>
-                {{ s1_form.experience_driving1 }}
-                {{ s1_form.experience_driving1.errors }}
-            </td>
-        </tr>
-        <tr id="vod2age">
-            <td>{{ s1_form.age2.label }}</td>
-            <td>
-                {{ s1_form.age2 }}
-                {{ s1_form.age2.errors }}
-            </td>
-        </tr>
-        <tr id="vod2exp">
-            <td>{{ s1_form.experience_driving2.label }}</td>
-            <td>
-                {{ s1_form.experience_driving2 }}
-                {{ s1_form.experience_driving2.errors }}
-            </td>
-        </tr>
-        <tr id="vod3age">
-            <td>{{ s1_form.age3.label }}</td>
-            <td>
-                {{ s1_form.age3 }}
-                {{ s1_form.age3.errors }}
-            </td>
-        </tr>
-        <tr id="vod3exp">
-            <td>{{ s1_form.experience_driving3.label }}</td>
-            <td>
-                {{ s1_form.experience_driving3 }}
-                {{ s1_form.experience_driving3.errors }}
-            </td>
-        </tr>
-    </table>
-
-    <input type="submit" value="Рассчитать"/>
-</form>
-
-<br/>
-<a href="{% url cleansession %}">очистить сессию (для тестов)</a>
 {% endblock %}
