--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2214,3 +2214,17 @@ div.messages li {
     -moz-border-radius: 10px;
     border-radius: 10px;
 }
+
+#calc-tabs .form-round-block{
+    margin: 15px 0;
+    padding: 30px 20px;
+    background: url(/static/images/back_tabs.png) bottom left repeat-x;
+    border: 1px solid #4e1b06;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+}
+
+#calc-tabs .hide{
+   display: none;
+}
